# CubismNativeMotionSyncComponents

Framework/: CMakeLists.txt
Framework/src/live2d_cubism_motionsync_framework/: live2d_cubism_motionsync_framework.cpp  live2d_cubism_motionsync_framework.h
